refactor(CC): Java 25 idioms, hex without Bungee, fix matcher flow
- Replace Bungee ChatColor.of with legacy §x§r§r§g§g§b§b expansion using
  ChatColor.COLOR_CHAR so hex translation works on Paper back to 1.8.8.
- Fix translateHex to drive replacements from a single Matcher with
  appendReplacement/appendTail (previous loop used a stale matcher).
- Use Stream.toList(), private constructor, StringBuilder; precompile
  strip regexes; null-safe translate(List).
- Document hex behavior in javadoc.

Co-authored-by: Jejdhfhrjeks <wduwdheufhuedhu@users.noreply.github.com>